--- a/src/app/autores/autores.page.html
+++ b/src/app/autores/autores.page.html
@@ -12,7 +12,7 @@
         <ion-button color="primary">
           <ion-icon name="create" slot="icon-only"></ion-icon>
         </ion-button>
-        <ion-button color="primary">
+        <ion-button color="primary" (click)="confirmarExclusao(autor)">
           <ion-icon name="trash" slot="icon-only"></ion-icon>
         </ion-button>
       </ion-buttons>
