--- a/src/app/autores/autores-cadastro/autores-cadastro.component.html
+++ b/src/app/autores/autores-cadastro/autores-cadastro.component.html
@@ -7,9 +7,52 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="end">
-    <ion-fab-button>
-      <ion-icon name="checkmark-outline"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+
+  <form [formGroup]="autoresForm">
+    <ion-item>
+      <ion-label position="floating">Nome: </ion-label>
+      <ion-input formControlName="nome"
+                 type="text"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Data de nascimento: </ion-label>
+      <ion-datetime formControlName="dataNascimento"
+                    display-format="DD de MMMM de YYYY"
+                    min="1930-01-01"
+                    cancel-text="Cancelar"
+                    done-text="Selecionar"
+                    [monthNames]="meses"
+                    [monthShortNames]="mesesAbreviados"></ion-datetime>
+    </ion-item>
+
+    <ion-item>
+      <ion-list>
+        <ion-radio-group name="genero"
+                         formControlName="genero">
+          <ion-list-header>
+            <ion-label>Gênero</ion-label>
+          </ion-list-header>
+          <ion-item>
+            <ion-label>Feminino</ion-label>
+            <ion-radio slot="start"
+                       value="F"></ion-radio>
+          </ion-item>
+          <ion-item>
+            <ion-label>Masculino</ion-label>
+            <ion-radio slot="start"
+                       value="M"></ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
+    </ion-item>
+
+
+    <ion-fab vertical="bottom"
+             horizontal="end">
+      <ion-fab-button (click)="salvar()">
+        <ion-icon name="checkmark-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </form>
 </ion-content>
