--- a/src/app/livros/livros.page.html
+++ b/src/app/livros/livros.page.html
@@ -1,9 +1,73 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>livros</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Livros</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item-sliding *ngFor="let livro of livros" #itemSliding>
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <ion-img src={{livro.logoUrl}}></ion-img>
+        </ion-thumbnail>
+        <ion-label>
+          <ion-text>
+            <h2>
+              <strong>{{livro.titulo}}</strong>
+            </h2>
+          </ion-text>
+          <h3>Autor(es):<br> <ion-text color="medium">{{livro.autores}}</ion-text></h3>
+          <ion-text color="danger">{{livro.preco | number : '1.2-2' : 'br'}}</ion-text>
+          <br>
+          <small>
+            ISBN: <ion-text color="medium">{{livro.isbn}}</ion-text>
+          </small>
+          <br>
+          <small>
+            Pág.: <ion-text color="medium">{{livro.numeroPaginas}}</ion-text>
+          </small>
+        </ion-label>
+      </ion-item>
+
+      <ion-item-options side="start">
+        <ion-item-option color="primary" (click)="editar(livro, itemSliding)">
+        <!-- <ion-item-option color="primary" [routerLink]="['edicao', livro.id]"> -->
+          <ion-icon slot="icon-only"
+                    name="pencil"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="confirmarExclusao(livro)">
+          <ion-icon slot="icon-only"
+                    name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+
+    <!-- <ion-item *ngFor="let livro of livros">
+      <ion-label>{{livro.titulo}}</ion-label>
+      <ion-buttons>
+        <ion-button color="primary" [routerLink]="['edicao', livro.id]">
+          <ion-icon name="create" slot="icon-only"></ion-icon>
+        </ion-button>
+        <ion-button color="primary" (click)="confirmarExclusao(livro)">
+          <ion-icon name="trash" slot="icon-only"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+
+    </ion-item> -->
+  </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end">
+    <ion-fab-button [routerLink]="['cadastro']">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
