Criado cadastro dos livros

--- a/src/app/livros/livros-cadastro/livros-cadastro.component.html
+++ b/src/app/livros/livros-cadastro/livros-cadastro.component.html
@@ -12,18 +12,17 @@
       <ion-item>
         <ion-label position="floating">Título: </ion-label>
         <ion-input formControlName="titulo"
-                   autofocus=true
                    type="text">
         </ion-input>
-        <!-- <ion-text color="danger" *ngIf="titulo.errors">
+        <!-- <ion-text color="danger" *ngIf="titulo?.errors">
           <small *ngIf="titulo.errors.required && (titulo.dirty || titulo.touched)">
-            O campo título é obrigatório
+            O campo titulo é obrigatório
           </small>
           <small *ngIf="titulo.errors.minlength && (titulo.dirty || titulo.touched)">
-            O campo título deve conter no mínimo {{titulo.errors.minlength.requiredLength}} caracteres
+            O campo titulo deve conter no mínimo {{titulo.errors.minlength.requiredLength}} caracteres
           </small>
           <small *ngIf="titulo.errors.maxlength && (titulo.dirty || titulo.touched)">
-            O campo título deve conter no máximo {{titulo.errors.maxlength.requiredLength}} caracteres
+            O campo titulo deve conter no máximo {{titulo.errors.maxlength.requiredLength}} caracteres
           </small>
         </ion-text> -->
       </ion-item>
@@ -33,7 +32,7 @@
         <ion-input formControlName="isbn"
                    type="tel">
         </ion-input>
-        <!-- <ion-text color="danger" *ngIf="isbn.errors">
+        <ion-text color="danger" *ngIf="isbn?.errors">
           <small *ngIf="isbn.errors.required && (isbn.dirty || isbn.touched)">
             O campo ISBN é obrigatório
           </small>
@@ -43,7 +42,7 @@
           <small *ngIf="isbn.errors.maxlength && (isbn.dirty || isbn.touched)">
             O campo ISBN deve conter no máximo {{isbn.errors.maxlength.requiredLength}} caracteres
           </small>
-        </ion-text> -->
+        </ion-text>
       </ion-item>
 
       <ion-item>
@@ -51,30 +50,37 @@
         <ion-input formControlName="numeroPaginas"
                    type="number">
         </ion-input>
-        <!-- <ion-text color="danger" *ngIf="numeroPaginas.errors">
+        <ion-text color="danger" *ngIf="numeroPaginas?.errors">
           <small *ngIf="numeroPaginas.errors.required && (numeroPaginas.dirty || numeroPaginas.touched)">
             O campo Nº de páginas é obrigatório
           </small>
-        </ion-text> -->
+        </ion-text>
       </ion-item>
+
+      <!-- <ion-item>
+        <ion-label position="floating">Autores: </ion-label>
+        <ion-select formControlName="autores" multiple={true} cancelText="Cancelar" okText="OK">
+            <ion-select-option value="David Cockford">David Cockford</ion-select-option>
+        </ion-select>
+      </ion-item> -->
 
       <ion-item>
         <ion-label position="floating">Autores: </ion-label>
-        <ion-select value={toppings} multiple={true} cancelText="Cancelar" okText="OK">
-            <ion-select-option value="2">David Cockford</ion-select-option>
+        <ion-select formControlName="autores"
+                    [compareWith]="compareWith"
+                    multiple="true"
+                    ok-text="OK"
+                    cancel-text="Cancelar"
+                    name="autores">
+          <ion-select-option *ngFor="let autor of autores"
+                             [value]="autor">
+            {{autor.nome}}
+          </ion-select-option>
         </ion-select>
-        <!-- <ion-input formControlName="autores"
-                   type="tel">
-        </ion-input> -->
-        <!-- <ion-text color="danger" *ngIf="autores.errors">
-          <small *ngIf="autores.errors.required && (autores.dirty || autores.touched)">
-            O campo Autores é obrigatório
-          </small>
-        </ion-text> -->
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Preço</ion-label>
+        <ion-label position="floating">Preço:</ion-label>
         <ion-input formControlName="preco"
                    inputmode="decimal"
                    value="0.00"
@@ -87,17 +93,14 @@
                    clearInput=true
                    type="url">
         </ion-input>
-        <!-- <ion-text color="danger" *ngIf="titulo.errors">
-          <small *ngIf="titulo.errors.required && (titulo.dirty || titulo.touched)">
-            O campo título é obrigatório
+        <ion-text color="danger" *ngIf="logoUrl?.errors">
+          <small *ngIf="logoUrl.errors.required && (logoUrl.dirty || logoUrl.touched)">
+            O campo URL da logo é obrigatório
           </small>
-          <small *ngIf="titulo.errors.minlength && (titulo.dirty || titulo.touched)">
-            O campo título deve conter no mínimo {{titulo.errors.minlength.requiredLength}} caracteres
+          <small *ngIf="logoUrl.errors.minlength && (logoUrl.dirty || logoUrl.touched)">
+            O campo URL da logo deve conter no mínimo {{logoUrl.errors.minlength.requiredLength}} caracteres
           </small>
-          <small *ngIf="titulo.errors.maxlength && (titulo.dirty || titulo.touched)">
-            O campo título deve conter no máximo {{titulo.errors.maxlength.requiredLength}} caracteres
-          </small>
-        </ion-text> -->
+        </ion-text>
       </ion-item>
   
       <ion-fab vertical="bottom"
